# true-hire-backend

./: .env.sample  .gitignore  README.md  pyproject.toml  start_api.py
api/: main.py
src/controllers/: cv_controller.py
src/embeddings/: embeddings_factory.py
src/llm/: openai_llm.py
src/loaders/: docx_loader.py  pdf_loader.py  txt_loader.py
src/models/: cv_shortlist.py
src/retriever/: retriever_factory.py
src/routers/: cv_router.py
src/services/: cv_service.py  file_service.py
src/utils/: __init__.py  metadata_extractor.py  preprocessing.py
src/utils/embeddings/: embeddings_factory.py
src/utils/llm/: gemini_llm.py
src/utils/qa/: retrieval_qa.py
src/vectorstore/: chroma_client.py
